Add 5 important html tag for practice

--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice Project</title>
 </head>
+
 <body>
-    <h2>Project Start Now</h2>
+
+    <h1>Welcome to My Website</h1>
+    <h2>Learn HTML Step by Step</h2>
+
+    <div>
+        <p>
+            This is a simple webpage created using basic HTML tags.
+            HTML helps us structure content on the web.
+        </p>
+    </div>
+
+    <div>
+        <p>
+            Practice these tags regularly to become confident in web development.
+        </p>
+    </div>
 </body>
+
 </html>
