add a, img tag for practice

--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
             Practice these tags regularly to become confident in web development.
         </p>
     </div>
+
+    <div>
+        <h2>Explore More</h2>
+
+        <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93" alt="Tea Cup Image" width="250" />
+
+        <p>
+            Click the button below to learn more about HTML.
+        </p>
+
+        <a href="#">
+            <button>Read More</button>
+        </a>
+    </div>
 </body>
 
 </html>
