Practice form tag in htnl

--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@
             <button>Read More</button>
         </a>
     </div>
+
+    <section>
+  <h2>Join Our Course</h2>
+
+  <ul>
+    <li>Beginner Friendly</li>
+    <li>Real Projects</li>
+    <li>Certificate Included</li>
+  </ul>
+
+  <form>
+    <input type="text" placeholder="Your Name" required>
+    <input type="email" placeholder="Your Email" required>
+    <button type="submit">Join Now</button>
+  </form>
+
+  <footer>
+    <p>Contact us: info@example.com</p>
+  </footer>
+</section>
 </body>
 
 </html>
