Practice header and nav tags

--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
 </head>
 
 <body>
+    <header>
+        <h1>HTML Learning Hub</h1>
+        <h1>Welcome to My Website</h1>
+    </header>
 
-    <h1>Welcome to My Website</h1>
+    <nav>
+        <a href="#">Home</a> |
+        <a href="#">Courses</a> |
+        <a href="#">Blog</a>
+    </nav>
     <h2>Learn HTML Step by Step</h2>
 
     <div>
@@ -24,6 +32,15 @@
             Practice these tags regularly to become confident in web development.
         </p>
     </div>
+
+    <section>
+        <article>
+            <h2>Getting Started</h2>
+            <p>
+                Start learning <span>HTML</span> today and build websites.
+            </p>
+        </article>
+    </section>
 
     <div>
         <h2>Explore More</h2>
@@ -40,24 +57,24 @@
     </div>
 
     <section>
-  <h2>Join Our Course</h2>
+        <h2>Join Our Course</h2>
 
-  <ul>
-    <li>Beginner Friendly</li>
-    <li>Real Projects</li>
-    <li>Certificate Included</li>
-  </ul>
+        <ul>
+            <li>Beginner Friendly</li>
+            <li>Real Projects</li>
+            <li>Certificate Included</li>
+        </ul>
 
-  <form>
-    <input type="text" placeholder="Your Name" required>
-    <input type="email" placeholder="Your Email" required>
-    <button type="submit">Join Now</button>
-  </form>
+        <form>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <button type="submit">Join Now</button>
+        </form>
 
-  <footer>
-    <p>Contact us: info@example.com</p>
-  </footer>
-</section>
+        <footer>
+            <p>Contact us: info@example.com</p>
+        </footer>
+    </section>
 </body>
 
 </html>
