Practice footer section

--- a/index.html
+++ b/index.html
@@ -71,9 +71,39 @@
             <button type="submit">Join Now</button>
         </form>
 
-        <footer>
-            <p>Contact us: info@example.com</p>
-        </footer>
+   <footer class="footer">
+  <div class="footer-container">
+
+    <div class="footer-box">
+      <h3>About Us</h3>
+      <p>
+        We help beginners learn HTML, CSS, and web development
+        with simple and practical examples.
+      </p>
+    </div>
+
+    <div class="footer-box">
+      <h3>Contact</h3>
+      <p>Email: info@example.com</p>
+      <p>Phone: +880 1234 567890</p>
+    </div>
+
+    <div class="footer-box">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Courses</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+    </div>
+
+  </div>
+
+  <p class="footer-bottom">
+    © 2025 My Website. All rights reserved.
+  </p>
+</footer>
+
     </section>
 </body>
 
